# cc-plugin-mcp

./: .gitignore  README.md  README_jp.md  pyproject.toml
src/cc_plugin_mcp/: __init__.py  main.py  models.py
src/cc_plugin_mcp/services/: __init__.py  plugin_service.py
tests/: __init__.py  test_api.py
