[project]
name = "cc-plugin-mcp"
version = "0.1.4"
description = "Claude Code Plugin MCP - Access Claude Code plugins via MCP protocol"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "papasim824", email = "papasim824@gmail.com"}
]

requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastmcp>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/ppspps824/cc-plugin-mcp"
"Repository" = "https://github.com/ppspps824/cc-plugin-mcp"
"Bug Tracker" = "https://github.com/ppspps824/cc-plugin-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
cc-plugin-mcp = "cc_plugin_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
